<resources>
    <string name="app_name">EcoBee</string>
    <string-array name="group">
        <item>Vegetables</item>
        <item>Fat, oil</item>
        <item>Animal residues</item>
        <item>Food-industry waste</item>
    </string-array>
    <string-array name="Vegetables">
        <item>Onion</item>
        <item>Onion peel</item>
        <item>Carrot</item>
        <item>Cauliflower</item>
        <item>Fresh pumpkin</item>
    </string-array>
    <string-array name="Fat_oil">
        <item>Glycerine</item>
        <item>Linseed oil</item>
        <item>Rape-seed oil</item>
        <item>Soja bean oil</item>
        <item>Sun flower oil</item>
    </string-array>
    <string-array name="Animal_residues">
        <item>Liquid pig manure</item>
        <item>Pig manure with litter</item>
        <item>Fresh Pig manure</item>
        <item>Sheep manure</item>
        <item>Fresh cow manure</item>
        <item>Cattle manure</item>
    </string-array>
    <string-array name="Food_industry_waste">
        <item>Oat-flakes</item>
        <item>Bran particles</item>
        <item>Apple marrow</item>
        <item>Soya flour</item>
        <item>CGM</item>
        <item>Milk sugar</item>
    </string-array>

    <string name="tv_userName">Yohan Asitha</string>
    <string name="tv_email">yohanasitha98@gmail.com</string>
    <string name="tv1">User Name</string>
    <string name="edt_userName">Yohan Asitha</string>
    <string name="tv2">Mobile Number</string>
    <string name="tv3">Address</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="tv4">Change Password</string>
    <string name="tv_currentPwd">Current Password</string>
    <string name="tv_newPwd">New Password</string>
    <string name="tv_rePwd">Re-Enter Password</string>
    <string name="tv_requestPanel">Request Panel</string>
    <string name="tv_height">Enter Panel Length ( meters )</string>
    <string name="tv_width">Enter Panel Width ( meters )</string>
    <string name="tv_cost">Panel Cost ( LKR )</string>
    <string name="tv_cCost" />
    <string name="btn_request">Request</string>
    <string name="edt_address">No 92/2, Irattakulama Road, Madampe</string>
    <string name="edt_number">0775160907</string>
    <string name="tv_settings">Yohan Asitha</string>
    <string name="tv_setting">Settings</string>
    <string name="tv_userDetails">User Details</string>
    <string name="tv_cPwd">Change Password</string>
    <string name="tv_rPanel">Request Panel</string>
    <string name="tv_logOut">Log Out</string>
    <string name="tv_pp">Privacy Policy</string>
    <string name="tv_tc">Terms and Conditions</string>
    <string name="etp_currentPwd">yohanasitha</string>
    <string name="etp_Pwd">yohanasitha</string>
    <string name="etp_rePwd">yohanasitha</string>
    <string name="tv_notification">Request Sent Successfully!</string>
    <string name="tv_ty">Thank You</string>
    <string name="btn_back">GO BACK TO HOME</string>
    <string name="btn_calculate">Calculate Cost</string>
    <string name="btn_enter">ENTER</string>
    <string name="tv_cPcost">Calculate Panel Cost</string>

    <string-array name="type">
        <item>Roof Top</item>
        <item>On a Slab</item>
        <item>On Land</item>
    </string-array>

    <string-array name="messure">
        <item>Meter</item>
        <item>Foots</item>
    </string-array>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
</resources>