<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/etp_rePwd"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/etp_rePwd"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rePwd" />

    <TextView
        android:id="@+id/tv_rePwd"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:text="@string/tv_rePwd"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etp_newPwd" />

    <EditText
        android:id="@+id/etp_newPwd"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/etp_Pwd"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newPwd" />

    <TextView
        android:id="@+id/tv_newPwd"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:text="@string/tv_newPwd"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etp_currentPwd" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="106dp"
        android:text="@string/tv4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_currentPassword"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="106dp"
        android:text="@string/tv_currentPwd"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />

    <EditText
        android:id="@+id/etp_currentPwd"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/etp_currentPwd"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentPassword" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#F31111"
        android:text="@string/btn_cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etp_rePwd" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="#F31111"
        android:text="@string/btn_save"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etp_rePwd" />

</androidx.constraintlayout.widget.ConstraintLayout>