<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_settings"
        android:textAlignment="center"
        android:textColor="#CC020202"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="116dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gc" />


    <TextView
        android:id="@+id/tv_userDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="71dp"
        android:text="@string/tv_userDetails"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_cPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:text="@string/tv_cPwd"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userDetails" />

    <TextView
        android:id="@+id/tv_rPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:text="@string/tv_rPanel"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cPwd" />

    <TextView
        android:id="@+id/tv_logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="35dp"
        android:text="@string/tv_logOut"
        android:textColor="#F31111"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tc" />

    <TextView
        android:id="@+id/tv_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="238dp"
        android:text="@string/tv_pp"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rPanel" />

    <TextView
        android:id="@+id/tv_tc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="168dp"
        android:text="@string/tv_tc"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pp" />






    />

</androidx.constraintlayout.widget.ConstraintLayout>