<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:text="@string/tv_userName"
        android:textAlignment="inherit"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="210dp"
        android:layout_height="24dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="100dp"
        android:text="@string/tv_email"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="188dp"
        android:text="@string/tv1"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <EditText
        android:id="@+id/edt_userName"
        android:layout_width="365dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_userName"
        android:textAlignment="viewStart"
        android:textColor="#B3000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="184dp"
        android:text="@string/tv2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_userName" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="365dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="#B3000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="184dp"
        android:text="@string/tv3"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_number" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textAlignment="viewStart"
        android:textColor="#B3000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#F31111"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#F31111"
        android:text="@string/btn_save"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>