<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CalculatePanelCost">

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_height"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cPcost" />

    <TextView
        android:id="@+id/tv_height2"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_width"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="198dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textColor="#B3000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cPcost" />

    <EditText
        android:id="@+id/edt_width"
        android:layout_width="198dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textColor="#B3000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_height" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="#F31111"
        android:onClick="openRequestPanel"
        android:text="@string/btn_enter"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height2" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#F31111"
        android:text="@string/btn_cancel"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_width" />

    <TextView
        android:id="@+id/tv_cPcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="76dp"
        android:text="@string/tv_cPcost"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>